# email-template-generation

./: .env.example  .gitignore  INTEGRATION.md  Makefile  README.md  app.py  cli.py  drawio_architecture.drawio  pyproject.toml  requirements.txt  resume_summary.md
backend/: __init__.py  config.py  logging_config.py  main.py  schemas.py
backend/api/: dependencies.py  routes.py
backend/core/: __init__.py  clustering.py  data_loader.py  embeddings.py  evaluation.py  fine_tuning.py  pipeline.py  preprocessing.py  sentiment.py  template_generator.py
backend/utils/: __init__.py  file_utils.py  text_utils.py
data/: sample_emails.csv
data/processed/: cleaned_emails.csv
frontend/: __init__.py  api_client.py  index.html  package-lock.json  package.json  streamlit_app.py  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ActionCard.tsx  DownloadPanel.tsx  EmailInputPanel.tsx  EmptyState.tsx  EvaluationPanel.tsx  Footer.tsx  HeroSection.tsx  LoadingState.tsx  MetricCard.tsx  Navbar.tsx  TemplateBrowser.tsx  TemplateCard.tsx  UploadPanel.tsx
frontend/src/types/: api.ts
frontend/src/utils/: constants.ts
outputs/: templates.csv  templates.json  templates.md
tests/: conftest.py  test_api.py  test_api_client.py  test_cli.py  test_clustering.py  test_data_loader.py  test_embeddings.py  test_evaluation.py  test_preprocessing.py  test_project_docs.py  test_template_generator.py
